--- a/cpp-opencv-study.vcxproj
+++ b/cpp-opencv-study.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="1__pencil_sketch_conversion.cpp" />
     <ClCompile Include="2_cartoon_filter.cpp" />
     <ClCompile Include="3_sketch_filter.cpp" />
+    <ClCompile Include="4__feature_matching.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
