--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="3_sketch_filter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4__feature_matching.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
