--- a/cpp-opencv-study.vcxproj
+++ b/cpp-opencv-study.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="2_cartoon_filter.cpp" />
     <ClCompile Include="3_sketch_filter.cpp" />
     <ClCompile Include="4__feature_matching.cpp" />
+    <ClCompile Include="5__image_segmentation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
