이미지 스티칭

--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="5__image_segmentation.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="6__image_stitching.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
