--- a/cpp-opencv-study.vcxproj
+++ b/cpp-opencv-study.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="3_sketch_filter.cpp" />
     <ClCompile Include="4__feature_matching.cpp" />
     <ClCompile Include="5__image_segmentation.cpp" />
+    <ClCompile Include="6__image_stitching.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
