--- a/cpp-opencv-study.vcxproj
+++ b/cpp-opencv-study.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="4__feature_matching.cpp" />
     <ClCompile Include="5__image_segmentation.cpp" />
     <ClCompile Include="6__image_stitching.cpp" />
+    <ClCompile Include="8__hough_transform_for_line_detection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
