--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="6__image_stitching.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="8__hough_transform_for_line_detection.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
