--- a/cpp-opencv-study.vcxproj
+++ b/cpp-opencv-study.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10__motion_detection.cpp" />
     <ClCompile Include="1_object_detection_red.cpp" />
     <ClCompile Include="1__pencil_sketch_conversion.cpp" />
     <ClCompile Include="2_cartoon_filter.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="5__image_segmentation.cpp" />
     <ClCompile Include="6__image_stitching.cpp" />
     <ClCompile Include="8__hough_transform_for_line_detection.cpp" />
+    <ClCompile Include="9__object_tracking.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
