--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="8__hough_transform_for_line_detection.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9__object_tracking.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10__motion_detection.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
