문서스캐너 - 아핀 변환

--- a/cpp-opencv-study.vcxproj
+++ b/cpp-opencv-study.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="10__motion_detection.cpp" />
+    <ClCompile Include="11__document_aligner.cpp" />
     <ClCompile Include="1_object_detection_red.cpp" />
     <ClCompile Include="1__pencil_sketch_conversion.cpp" />
     <ClCompile Include="2_cartoon_filter.cpp" />
