--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="10__motion_detection.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="11__document_aligner.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
