--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="12__live_video_augmentation.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="14__background_subtraction.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
