--- a/cpp-opencv-study.vcxproj
+++ b/cpp-opencv-study.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="11__document_aligner.cpp" />
     <ClCompile Include="12__live_video_augmentation.cpp" />
     <ClCompile Include="14__background_subtraction.cpp" />
+    <ClCompile Include="15__coin_counter.cpp" />
     <ClCompile Include="1_object_detection_red.cpp" />
     <ClCompile Include="1__pencil_sketch_conversion.cpp" />
     <ClCompile Include="2_cartoon_filter.cpp" />
