--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="14__background_subtraction.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="15__coin_counter.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
