--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="15__coin_counter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="17__face_detection.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
