--- a/cpp-opencv-study.vcxproj.filters
+++ b/cpp-opencv-study.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="18__cartoonification_of_image.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="21__invisible_cloak.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
